marketify/src/app/components/navbar/navbar.component.scss
nav{
  min-height: 60px;
  color: #484543;
}

.nb-container{
  padding: 0 32px;
  width: 100%;

  .nb-brand{
    font-weight: bold;
    font-size: 1.2rem;
    font-family: 'Courgette', cursive;
  }
  a, li{
    color: #484543;
    display: inline;
    font-family: 'Roboto', sans-serif;
  }
}

.bar1, .bar2, .bar3 {
  width: 35px;
  height: 5px;
  background-color: #333;
  margin: 6px 0;
  transition: 0.4s;
}

.change {
  .bar1, .bar2, .bar3{
    color: #fff;
  }
  .bar1{
    transform: rotate(-45deg) translate(-9px, 6px);
  }
  .bar2{
    opacity: 0;
  }
  .bar3{
    transform: rotate(45deg) translate(-8px, -8px);
  }
}

.nb-burger {
  cursor: pointer;
  padding: 10px 0;
  z-index: 1;

  div{
    background: #484543;
    width: 35px;
    height: 5px;
    margin: 6px 0;
  }
}

.nb-sidebar{
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  background: #fff;

  ul{
    height: 100vh;
    display: flex;
    margin-left: 10vw;
    // align-items: center;
    justify-content: center;
    flex-direction: column;
  }
  a{
    // color: #fff;
    padding: 0;
  }
}

